# Python-Jacobi-Benchmark

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
app/: main.py
app/modules/: heat_equation.py  jacobi.py
